<resources>
    <string name="app_name">SMS to 13033</string>

    <string name="name_label">Ονοματεπώνυμο</string>
    <string name="name_hint">Εισάγετε Ονοματεπώνυμο</string>

    <string name="street_label">Διεύθυνση Κατοικίας</string>
    <string name="street_hint">Εισάγετε Διεύθυνση Κατοικίας</string>

    <string name="save_name_street_label">Αποθήκευση Στοιχείων</string>

    <string name="choose_label">Επιλέξτε ένα απο τα παρακάτω για μετακίνηση</string>

    <string name="btn1_label">1. Σε φαρμακείο ή επίσκεψη στον γιατρό</string>
    <string name="btn2_label">2. Σε Κατάστημα προμηθειών αγαθών</string>
    <string name="btn3_label">3. Σε τράπεζα</string>
    <string name="btn4_label">4. για παροχή βοήθειας</string>
    <string name="btn5_label">5. Σε τελετή ή μετάβαση διαζευγμένων γονέων και τέκνων</string>
    <string name="btn6_label">6. Σωματική άσκηση σε εξωτερικό χώρο ή κίνηση με κατοικίδιο ζώο</string>

    <string name="error_empty_tv">Πρέπει να συμπληρωθεί</string>

    <string name="info_button_desc">info</string>
    <string name="info_dialog_title">Πώς γίνονται οι μετακινήσεις</string>
    <string name="info_dialog_message">
        Εκτός από λόγους εργασίας (βεβαίωση τύπου Α), για μεμονωμένες μετακινήσεις (τύπου Β), έχετε 3 επιλογές: SMS, εκτυπωμένο και συμπληρωμένο έντυπο βεβαίωσης κίνησης, ή και χειρόγραφη βεβαίωση κίνησης.\n\n
Για αποστολή SMS\n
Μπορείτε να στείλετε από το κινητό σας μήνυμα SMS στον αριθμό 13033 χωρίς χρέωση.\n
Το SMS πρέπει να είναι της μορφής:\n\n
X [κενό] ονοματεπώνυμο και διεύθυνση κατοικίας\n
όπου Χ ο λόγος εξόδου με τον αριθμό 1, 2, 3, 4, 5, 6 που αντιστοιχεί στις παρακάτω αιτιολογίες:\n\n
1.\tΜετάβαση σε φαρμακείο ή επίσκεψη στον γιατρό, εφόσον αυτό συνιστάται μετά από σχετική επικοινωνία. ΙΣΧΥΕΙ ΚΑΙ ΜΕΤΑ ΤΙΣ 21:00 \n\n
2.\tΜετάβαση σε εν λειτουργία κατάστημα προμηθειών αγαθών πρώτης ανάγκης (σούπερ μάρκετ, μίνι μάρκετ), όπου δεν είναι δυνατή η αποστολή τους. ΔΕΝ ΙΣΧΥΕΙ ΜΕΤΑ ΤΙΣ 21:00 \n\n
3.\tΜετάβαση στην τράπεζα, στο μέτρο που δεν είναι δυνατή η ηλεκτρονική συναλλαγή. ΔΕΝ ΙΣΧΥΕΙ ΜΕΤΑ ΤΙΣ 21:00 \n\n
4.\tΚίνηση για παροχή βοήθειας σε ανθρώπους που βρίσκονται σε ανάγκη ή συνοδεία ανηλίκων μαθητών από/προς το σχολείο. ΔΕΝ ΙΣΧΥΕΙ ΜΕΤΑ ΤΙΣ 21:00 \n\n
5.\tΜετάβαση σε τελετή κηδείας υπό τους όρους που προβλέπει ο νόμος ή μετάβαση διαζευγμένων γονέων ή γονέων που τελούν σε διάσταση που είναι αναγκαία για τη διασφάλιση της επικοινωνίας γονέων και τέκνων, σύμφωνα με τις κείμενες διατάξεις. ΔΕΝ ΙΣΧΥΕΙ ΜΕΤΑ ΤΙΣ 21:00 \n\n
6.\t-Σωματική άσκηση σε εξωτερικό χώρο ατομικά ή ανά δύο άτομα, τηρώντας στην τελευταία αυτή περίπτωση την αναγκαία απόσταση 1,5 μέτρου. ΔΕΝ ΙΣΧΥΕΙ ΜΕΤΑ ΤΙΣ 21:00 \n
\t-Κίνηση με κατοικίδιο ζώο, ατομικά ή ανά δύο άτομα, τηρώντας στην τελευταία αυτή περίπτωση την αναγκαία απόσταση 1,5 μέτρου. ΙΣΧΥΕΙ ΚΑΙ ΜΕΤΑ ΤΙΣ 21:00
Θα λαμβάνετε ως απάντηση:\n
Μετακίνηση [κενό] X [κενό] ονοματεπώνυμο και διεύθυνση κατοικίας \n\n
Η υπηρεσία είναι διαθέσιμη από κινητά τηλέφωνα με κάρτα SIM των παρόχων κινητής τηλεφωνίας που λειτουργούν στην Ελλάδα (Cosmote, Vodafone GR, Wind). Προκειμένου να κάνουν χρήση της υπηρεσίας 13033 οι πολίτες με συσκευή που έχει κάρτα SIM δικτύου του εξωτερικού, μπορούν να προμηθευτούν μια σύνδεση καρτοκινητού από τα σημεία πώλησης των παρόχων. Υπενθυμίζεται ότι η χρήση της υπηρεσίας 13033 είναι δωρεάν.</string>

    <string name="info_dialog_ok">ΟΚ</string>
    <string name="info_label">Πληροφορίες</string>

    <string name="share_button_desc">Share the app</string>

    <string name="share_button_text">Είναι μια εφαρμογή που θα σε βοηθήσει να στέλνεις αυτοματοποιημένα τα μηνύματα, στο 13033, για τις αναγκαίες μετακινήσεις σου\n https://play.google.com/store/apps/details?id=com.revinad.smsto13033</string>

</resources>